tiny fix to correct non wrapping of long words

--- a/react-front-end-app/src/components/ReviewPage.css
+++ b/react-front-end-app/src/components/ReviewPage.css
@@ -22,3 +22,7 @@ button {
 button:hover {
     background-color: rgb(197, 197, 197);
 }
+
+#user-note-item {
+    overflow-wrap: break-word;
+}
